fix update table

--- a/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.html
+++ b/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.html
@@ -13,6 +13,8 @@
     <script src="placeOrder.js"></script>
     <script src="order/order.js"></script>
     <script src="order/item.js"></script>
+    <script src="order/AvailableItems.js"></script>
+    <script src="order/EntitledDiscounts.js"></script>
     <link rel="stylesheet" href="../../../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../../../common/navBar.css">
     <link rel="stylesheet" href="../../../../common/jquery-ui-1.12.1.custom/jquery-ui.css">
