order was sent successfully on client side

--- a/SDM_webApp/web/pages/localStores/customerPage/placeOrder/approveOrder/approveOrder.html
+++ b/SDM_webApp/web/pages/localStores/customerPage/placeOrder/approveOrder/approveOrder.html
@@ -99,8 +99,8 @@
                                 <h5 class="font-weight-bold" id="total"></h5>
                             </li>
                         </ul>
-                        <a href="#" class="btn btn-dark rounded-pill py-2 btn-block">Approve</a>
-                        <a href="#" class="btn btn-dark rounded-pill py-2 btn-block">Cancel</a>
+                        <a href="#" class="btn btn-dark rounded-pill py-2 btn-block" id =" approvedBtn">Approve</a>
+                        <a href="#" class="btn btn-dark rounded-pill py-2 btn-block" id =" CancelBtn">Cancel</a>
                     </div>
                 </div>
             </div>
