--- a/SDM_webApp/web/pages/localStores/ownerPage/ownerFeedbacks/ownerFeedbacks.html
+++ b/SDM_webApp/web/pages/localStores/ownerPage/ownerFeedbacks/ownerFeedbacks.html
@@ -16,6 +16,17 @@
 
 </head>
 <body>
+<div class="container">
+    <div class="row container align-items-center">
+        <h2>Available stores</h2>
+    </div>
+    <div class="row container align-items-center">
+        <select class='btn btn-secondary' id="storesDropDown" name="storesDropDown">
+            <option id="pickAStore" value="pickAStore">Pick a store</option>
+            <div class="dropdown-divider"></div>
+        </select>
+    </div>
+</div>
 <div class="row d-flex justify-content-center mt-100 mb-100">
     <div class="col-lg-6">
         <div class="card">
