--- a/SDM_webApp/web/pages/localStores/ownerPage/ownerStoresHistory/ownerStoresHistory.html
+++ b/SDM_webApp/web/pages/localStores/ownerPage/ownerStoresHistory/ownerStoresHistory.html
@@ -34,6 +34,7 @@
                     <div class="dropdown-divider"></div>
                 </select>
             </div>
+        </div>
             <div class="row">
                 <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
 
