--- a/SDM_webApp/web/pages/localStores/customerPage/feedbackPage/feedback.html
+++ b/SDM_webApp/web/pages/localStores/customerPage/feedbackPage/feedback.html
@@ -31,7 +31,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a id="userNameText">user Name</a>
+                    <a id="userNameText"></a>
                 </li>
             </ul>
         </div>
