--- a/SDM_webApp/web/pages/localStores/customerPage/userOrderHistoryPage/userOrderHistoryPage.html
+++ b/SDM_webApp/web/pages/localStores/customerPage/userOrderHistoryPage/userOrderHistoryPage.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="../../../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <script src="../../../../common/bootstrap-4.3.1-dist/js/bootstrap.bundle.js"></script>
     <script src="../../../../common/bootstrap-4.3.1-dist/js/bootstrap.js"></script>
+    <script src="../../../../common/jquery-ui.js"></script>
     <script src="userOrderHistoryPage.js"></script>
-
+    <link rel="stylesheet" href="userOrderHistoryPage.css">
     <link rel="stylesheet" href="../../../../common/table.css">
     <link rel="stylesheet" href="../../../../common/navBar.css">
-    <link rel="stylesheet" href="userOrderHistoryPage.css">
 
 </head>
 <body>
