--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -37,6 +37,9 @@
                 <li class="nav-item">
                     <a class="nav-link" id="thirdBtnText" href="#"></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="account" href="#">Account</a>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
