contecting the pages

--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -11,7 +11,7 @@
     <script src="../../common/bootstrap-4.3.1-dist/js/bootstrap.bundle.js"></script>
     <script src="../../common/bootstrap-4.3.1-dist/js/bootstrap.js"></script>
     <script src="localStores.js"></script>
-
+    <script src="../../common/utils.js"></script>
     <link rel="stylesheet" href="../../common/table.css">
     <link rel="stylesheet" href="localStores.css">
     <link rel="stylesheet" href="../../common/navBar.css">
