--- a/SDM_webApp/web/pages/localStores/ownerPage/ownerFeedbacks/ownerFeedbacks.html
+++ b/SDM_webApp/web/pages/localStores/ownerPage/ownerFeedbacks/ownerFeedbacks.html
@@ -9,7 +9,7 @@
     <script src="../../../../common/bootstrap-4.3.1-dist/js/bootstrap.bundle.js"></script>
     <script src="../../../../common/bootstrap-4.3.1-dist/js/bootstrap.js"></script>
     <script src="ownerFeedbacks.js"></script>
-
+    <script src="../../../../common/utils.js"></script>
     <link rel="stylesheet" href="../../../../common/table.css">
     <link rel="stylesheet" href="../../../../common/navBar.css">
     <link rel="stylesheet" href="ownerFeedbacks.css">
