--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="../../common/jquery-2.0.3.min.js"></script>
     <script src="../../common/context-path-helper.js"></script>
+    <script src="../notifactions.js"></script>
     <script src="storesAreaAndContent.js"></script>
+    <script src="../../common/jquery-ui.js"></script>
+
     <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="uploadFile.css">
     <link rel="stylesheet" href="../../common/table.css">
     <link rel="stylesheet" href="../../common/navBar.css">
+    <link rel="stylesheet" href="../../common/jquery-ui-1.12.1.custom/jquery-ui.css">
+
     <link rel="stylesheet" href="storesAreaAndContent.css">
 </head>
 <body>
@@ -76,6 +81,8 @@
     </div>
     <div>
         <button type="button" class="btn btn-dark" onclick="nextPage()" id="nextButton">Next</button>
+    </div>
+    <div id="WatchNews" class="row float-right">
     </div>
 </body>
 </html>
