--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -40,6 +40,9 @@
                 <li class="nav-item">
                     <a class="nav-link" id="account" href="#">Account</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="chat" href="../chat/chatroom.html">Chat</a>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
