alert front end done

--- a/SDM_webApp/web/pages/localStores/ownerPage/ownerStoresHistory/ownerStoresHistory.html
+++ b/SDM_webApp/web/pages/localStores/ownerPage/ownerStoresHistory/ownerStoresHistory.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../../../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <script src="../../../../common/bootstrap-4.3.1-dist/js/bootstrap.bundle.js"></script>
     <script src="../../../../common/bootstrap-4.3.1-dist/js/bootstrap.js"></script>
+    <script src="../../../notifactions.js"></script>
+
     <script src="ownerStoresHistory.js"></script>
 
     <link rel="stylesheet" href="../../../../common/table.css">
@@ -109,5 +111,7 @@
             </div>
         </div>
     </div>
+<div id="WatchNews" class="row float-right">
+</div>
 </body>
 </html>
