--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <script src="../../common/bootstrap-4.3.1-dist/js/bootstrap.bundle.js"></script>
     <script src="../../common/bootstrap-4.3.1-dist/js/bootstrap.js"></script>
+    <script src="../notifactions.js"></script>
     <script src="localStores.js"></script>
     <script src="../../common/utils.js"></script>
     <link rel="stylesheet" href="../../common/table.css">
