--- a/SDM_webApp/web/pages/localStores/ownerPage/ownerFeedbacks/ownerFeedbacks.html
+++ b/SDM_webApp/web/pages/localStores/ownerPage/ownerFeedbacks/ownerFeedbacks.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../../common/bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <script src="../../../../common/bootstrap-4.3.1-dist/js/bootstrap.bundle.js"></script>
     <script src="../../../../common/bootstrap-4.3.1-dist/js/bootstrap.js"></script>
+    <script src="../../../notifactions.js"></script>
     <script src="ownerFeedbacks.js"></script>
     <script src="../../../../common/utils.js"></script>
     <link rel="stylesheet" href="../../../../common/table.css">
@@ -16,27 +17,29 @@
 
 </head>
 <body>
-<div class="container">
-    <div class="row container align-items-center">
-        <h2>Available stores</h2>
+    <div class="container">
+        <div class="row container align-items-center">
+            <h2>Available stores</h2>
+        </div>
+        <div class="row container align-items-center">
+            <select class='btn btn-secondary' id="storesDropDown" name="storesDropDown">
+                <option id="pickAStore" value="pickAStore">Pick a store</option>
+                <div class="dropdown-divider"></div>
+            </select>
+        </div>
     </div>
-    <div class="row container align-items-center">
-        <select class='btn btn-secondary' id="storesDropDown" name="storesDropDown">
-            <option id="pickAStore" value="pickAStore">Pick a store</option>
-            <div class="dropdown-divider"></div>
-        </select>
-    </div>
-</div>
-<div class="row d-flex justify-content-center mt-100 mb-100">
-    <div class="col-lg-6">
-        <div class="card">
-            <div class="card-body text-center">
-                <h4 class="card-title">Latest Comments</h4>
-            </div>
-            <div class="comment-widgets" id="commentsSection">
+    <div class="row d-flex justify-content-center mt-100 mb-100">
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-body text-center">
+                    <h4 class="card-title">Latest Comments</h4>
+                </div>
+                <div class="comment-widgets" id="commentsSection">
+                </div>
             </div>
         </div>
     </div>
-</div>
+    <div id="WatchNews" class="row float-right">
+    </div>
 </body>
 </html>
