go to second page done

--- a/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.html
+++ b/SDM_webApp/web/pages/localStores/customerPage/placeOrder/placeOrder.html
@@ -140,6 +140,8 @@
             </div>
         </div>
     </div>
+<a href="../../../storesAreaAndContent/storesAreaAndContent.html"><button class="btn btn-dark" id="secondPgBtn" style="width: 324px;">go to second page</button></a>
 
 </body>
+
 </html>
