--- a/SDM_webApp/web/pages/localStores/customerPage/userOrderHistoryPage/userOrderHistoryPage.html
+++ b/SDM_webApp/web/pages/localStores/customerPage/userOrderHistoryPage/userOrderHistoryPage.html
@@ -16,97 +16,99 @@
 
 </head>
 <body>
-<div class="px-4 px-lg-0">
-    <!-- For demo purpose -->
-    <div class="container text-white py-5 text-center">
-        <h1 class="display-4">Orders history</h1>
-    </div>
-    <!-- End -->
+    <div class="px-4 px-lg-0">
+            <!-- For demo purpose -->
+            <div class="container text-white py-5 text-center">
+                <h1 class="display-4">Orders history</h1>
+            </div>
+            <!-- End -->
 
-    <div class="pb-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
+            <div class="pb-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
 
-                    <!-- stores table -->
-                    <div class="table-responsive">
-                        <h3 class="font-italic mb-4 text-center" >Click on the order to see items</h3>
-                        <table class="table " id ="storeTable">
+                            <!-- stores table -->
+                            <div class="table-responsive">
+                                <h3 class="font-italic mb-4 text-center" >Click on the order to see items</h3>
+                                <table class="table " id ="storeTable">
+                                    <thead>
+                                    <tr>
+                                        <th scope="col" class="border-0 bg-light">
+                                            <div class="p-2 px-3 text-uppercase">ID</div>
+                                        </th>
+                                        <th scope="col" class="border-0 bg-light">
+                                            <div class="py-2 text-uppercase">Date</div>
+                                        </th>
+                                        <th scope="col" class="border-0 bg-light">
+                                            <div class="py-2 text-uppercase">Location</div>
+                                        </th>
+                                        <th scope="col" class="border-0 bg-light">
+                                            <div class="py-2 text-uppercase">Number of stores</div>
+                                        </th>
+                                        <th scope="col" class="border-0 bg-light">
+                                            <div class="py-2 text-uppercase">Amount of items</div>
+                                        </th>
+                                        <th scope="col" class="border-0 bg-light">
+                                            <div class="py-2 text-uppercase">Items cost</div>
+                                        </th>
+                                        <th scope="col" class="border-0 bg-light">
+                                            <div class="py-2 text-uppercase">Shipping cost</div>
+                                        </th>
+                                        <th scope="col" class="border-0 bg-light">
+                                            <div class="py-2 text-uppercase">Total cost</div>
+                                        </th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- End -->
+                        </div>
+                    </div>
+                    <!--item section-->
+                    <div class="row py-5 p-4 bg-white rounded shadow-sm">
+                        <table class="table" >
                             <thead>
                             <tr>
                                 <th scope="col" class="border-0 bg-light">
                                     <div class="p-2 px-3 text-uppercase">ID</div>
                                 </th>
                                 <th scope="col" class="border-0 bg-light">
-                                    <div class="py-2 text-uppercase">Date</div>
+                                    <div class="py-2 text-uppercase">Name</div>
                                 </th>
                                 <th scope="col" class="border-0 bg-light">
-                                    <div class="py-2 text-uppercase">Location</div>
+                                    <div class="py-2 text-uppercase">Sell by</div>
                                 </th>
                                 <th scope="col" class="border-0 bg-light">
-                                    <div class="py-2 text-uppercase">Number of stores</div>
+                                    <div class="py-2 text-uppercase">Store name</div>
                                 </th>
                                 <th scope="col" class="border-0 bg-light">
-                                    <div class="py-2 text-uppercase">Amount of items</div>
+                                    <div class="py-2 text-uppercase">Store id</div>
                                 </th>
                                 <th scope="col" class="border-0 bg-light">
-                                    <div class="py-2 text-uppercase">Items cost</div>
+                                    <div class="py-2 text-uppercase">Amount</div>
                                 </th>
                                 <th scope="col" class="border-0 bg-light">
-                                    <div class="py-2 text-uppercase">Shipping cost</div>
+                                    <div class="py-2 text-uppercase">Price per unit</div>
                                 </th>
                                 <th scope="col" class="border-0 bg-light">
                                     <div class="py-2 text-uppercase">Total cost</div>
                                 </th>
+                                <th scope="col" class="border-0 bg-light">
+                                    <div class="py-2 text-uppercase">Part of discount</div>
+                                </th>
                             </tr>
                             </thead>
-                            <tbody>
-                            </tbody>
+                            <tbody id ="itemsTable">
+                            </tbody >
                         </table>
-                    </div>
-                    <!-- End -->
-                </div>
-            </div>
-            <!--item section-->
-            <div class="row py-5 p-4 bg-white rounded shadow-sm">
-                <table class="table" >
-                    <thead>
-                    <tr>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="p-2 px-3 text-uppercase">ID</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Name</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Sell by</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Store name</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Store id</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Amount</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Price per unit</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Total cost</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Part of discount</div>
-                        </th>
-                    </tr>
-                    </thead>
-                    <tbody id ="itemsTable">
-                    </tbody >
-                </table>
 
+                    </div>
             </div>
+        </div>
     </div>
-</div>
+    <button class="btn btn-dark" id="secondPgBtn">go to second page</button>
 </body>
 </html>
