--- a/SDM_webApp/web/pages/localStores/ownerPage/ownerFeedbacks/ownerFeedbacks.html
+++ b/SDM_webApp/web/pages/localStores/ownerPage/ownerFeedbacks/ownerFeedbacks.html
@@ -41,5 +41,6 @@
     </div>
     <div id="WatchNews" class="row float-right">
     </div>
+    <a href="../../../storesAreaAndContent/storesAreaAndContent.html"><button class="btn btn-dark" id="secondPgBtn">go to second page</button></a>
 </body>
 </html>
