--- a/SDM_webApp/web/pages/localStores/ownerPage/ownerStoresHistory/ownerStoresHistory.html
+++ b/SDM_webApp/web/pages/localStores/ownerPage/ownerStoresHistory/ownerStoresHistory.html
@@ -18,100 +18,101 @@
 
 </head>
 <body>
-<div class="px-4 px-lg-0">
-    <!-- For demo purpose -->
-    <div class="container text-white py-5 text-center">
-        <h1 class="display-4">Orders history</h1>
-    </div>
-    <!-- End -->
+    <div class="px-4 px-lg-0">
 
-    <div class="pb-5">
-        <div class="container">
-            <div class="row container align-items-center">
-                <h2>Available stores</h2>
-            </div>
-            <div class="row container align-items-center">
-                <select class='btn btn-secondary' id="storesDropDown" name="storesDropDown">
-                    <option id="pickAStore" value="pickAStore">Pick a store</option>
-                    <div class="dropdown-divider"></div>
-                </select>
-            </div>
+        <div class="container text-white py-5 text-center">
+            <h1 class="display-4">Orders history</h1>
         </div>
-            <div class="row">
-                <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
 
-                    <!-- stores table -->
-                    <div class="table-responsive">
-                        <h3 class="font-italic mb-4 text-center" >Click on the store to see details</h3>
-                        <table class="table " id ="storeTable">
-                            <thead>
-                            <tr>
-                                <th scope="col" class="border-0 bg-light">
-                                    <div class="p-2 px-3 text-uppercase">Order number</div>
-                                </th>
-                                <th scope="col" class="border-0 bg-light">
-                                    <div class="py-2 text-uppercase">Date</div>
-                                </th>
-                                <th scope="col" class="border-0 bg-light">
-                                    <div class="py-2 text-uppercase">Customer name</div>
-                                </th>
-                                <th scope="col" class="border-0 bg-light">
-                                    <div class="py-2 text-uppercase">Customer location</div>
-                                </th>
-                                <th scope="col" class="border-0 bg-light">
-                                    <div class="py-2 text-uppercase">Amount of items</div>
-                                </th>
-                                <th scope="col" class="border-0 bg-light">
-                                    <div class="py-2 text-uppercase">Items cost</div>
-                                </th>
-                                <th scope="col" class="border-0 bg-light">
-                                    <div class="py-2 text-uppercase">Shipping cost</div>
-                                </th>
-                            </tr>
-                            </thead>
-                            <tbody id="storeTableBody">
-                            </tbody>
-                        </table>
-                    </div>
-                    <!-- End -->
+        <div class="pb-5">
+
+            <div class="container">
+                <div class="row container align-items-center">
+                    <h2>Available stores</h2>
+                </div>
+                <div class="row container align-items-center">
+                    <select class='btn btn-secondary' id="storesDropDown" name="storesDropDown">
+                        <option id="pickAStore" value="pickAStore">Pick a store</option>
+                        <div class="dropdown-divider"></div>
+                    </select>
                 </div>
             </div>
-            <!--item section-->
-            <div class="row py-5 p-4 bg-white rounded shadow-sm">
-                <table class="table" >
-                    <thead>
-                    <tr>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="p-2 px-3 text-uppercase">ID</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Name</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Sell by</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Amount sold</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Price per unit</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Total cost</div>
-                        </th>
-                        <th scope="col" class="border-0 bg-light">
-                            <div class="py-2 text-uppercase">Part of discount</div>
-                        </th>
-                    </tr>
-                    </thead>
-                    <tbody id ="itemsTable">
-                    </tbody >
-                </table>
+                <div class="row">
+                    <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
 
+                        <!-- stores table -->
+                        <div class="table-responsive">
+                            <h3 class="font-italic mb-4 text-center" >Click on the store to see details</h3>
+                            <table class="table " id ="storeTable">
+                                <thead>
+                                <tr>
+                                    <th scope="col" class="border-0 bg-light">
+                                        <div class="p-2 px-3 text-uppercase">Order number</div>
+                                    </th>
+                                    <th scope="col" class="border-0 bg-light">
+                                        <div class="py-2 text-uppercase">Date</div>
+                                    </th>
+                                    <th scope="col" class="border-0 bg-light">
+                                        <div class="py-2 text-uppercase">Customer name</div>
+                                    </th>
+                                    <th scope="col" class="border-0 bg-light">
+                                        <div class="py-2 text-uppercase">Customer location</div>
+                                    </th>
+                                    <th scope="col" class="border-0 bg-light">
+                                        <div class="py-2 text-uppercase">Amount of items</div>
+                                    </th>
+                                    <th scope="col" class="border-0 bg-light">
+                                        <div class="py-2 text-uppercase">Items cost</div>
+                                    </th>
+                                    <th scope="col" class="border-0 bg-light">
+                                        <div class="py-2 text-uppercase">Shipping cost</div>
+                                    </th>
+                                </tr>
+                                </thead>
+                                <tbody id="storeTableBody">
+                                </tbody>
+                            </table>
+                        </div>
+                        <!-- End -->
+                    </div>
+                </div>
+                <!--item section-->
+                <div class="row py-5 p-4 bg-white rounded shadow-sm">
+                    <table class="table" >
+                        <thead>
+                        <tr>
+                            <th scope="col" class="border-0 bg-light">
+                                <div class="p-2 px-3 text-uppercase">ID</div>
+                            </th>
+                            <th scope="col" class="border-0 bg-light">
+                                <div class="py-2 text-uppercase">Name</div>
+                            </th>
+                            <th scope="col" class="border-0 bg-light">
+                                <div class="py-2 text-uppercase">Sell by</div>
+                            </th>
+                            <th scope="col" class="border-0 bg-light">
+                                <div class="py-2 text-uppercase">Amount sold</div>
+                            </th>
+                            <th scope="col" class="border-0 bg-light">
+                                <div class="py-2 text-uppercase">Price per unit</div>
+                            </th>
+                            <th scope="col" class="border-0 bg-light">
+                                <div class="py-2 text-uppercase">Total cost</div>
+                            </th>
+                            <th scope="col" class="border-0 bg-light">
+                                <div class="py-2 text-uppercase">Part of discount</div>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody id ="itemsTable">
+                        </tbody >
+                    </table>
+
+                </div>
             </div>
         </div>
+    <div id="WatchNews" class="row float-right">
     </div>
-<div id="WatchNews" class="row float-right">
-</div>
+    <a href="../../../storesAreaAndContent/storesAreaAndContent.html"><button class="btn btn-dark" id="secondPgBtn">go to second page</button></a>
 </body>
 </html>
