fix bug in feedback and order history of owner

--- a/SDM_webApp/web/pages/localStores/Account/account.html
+++ b/SDM_webApp/web/pages/localStores/Account/account.html
@@ -63,9 +63,10 @@
                             </tbody>
                         </table>
                     </div>
+                    <a href="../../storesAreaAndContent/storesAreaAndContent.html"><button class="btn btn-dark" id="secondPgBtn">go to second page</button></a>
                     <!-- End -->
                 </div>
-
+            </div>
         </div>
     </div>
 </div>
