--- a/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
+++ b/SDM_webApp/web/pages/storesAreaAndContent/storesAreaAndContent.html
@@ -84,6 +84,9 @@
     </div>
     <div id="WatchNews" class="row float-right">
     </div>
+    <div  class="row float-right">
+        <span id="fileError" style="margin-right: 20px;margin-top: 50\;margin-top: 50px;margin-top: 50px; color: red"> </span>
+    </div>
 </body>
 </html>
 
