minor fixing to back button name

--- a/SDM_webApp/web/pages/localStores/customerPage/userOrderHistoryPage/userOrderHistoryPage.html
+++ b/SDM_webApp/web/pages/localStores/customerPage/userOrderHistoryPage/userOrderHistoryPage.html
@@ -109,6 +109,6 @@
             </div>
         </div>
     </div>
-    <button class="btn btn-dark" id="secondPgBtn">go to second page</button>
+    <button class="btn btn-dark" id="secondPgBtn">back</button>
 </body>
 </html>
