--- a/SDM_webApp/web/pages/localStores/localStores.html
+++ b/SDM_webApp/web/pages/localStores/localStores.html
@@ -135,5 +135,6 @@
     </div>
 <div id="WatchNews" class="row float-right">
 </div>
+<a href="../storesAreaAndContent/storesAreaAndContent.html"><button class="btn btn-dark" id="secondPgBtn" style="width: 324px;">back</button></a>
 </body>
 </html>
