--- a/SDM_webApp/web/pages/chat/chatroom.html
+++ b/SDM_webApp/web/pages/chat/chatroom.html
@@ -56,6 +56,7 @@
 			</div>
 		</div>
 	</div>
+    <a href="../storesAreaAndContent/storesAreaAndContent.html"><button class="btn btn-dark" id="secondPgBtn">back</button></a>
 </div>
 </body>
 </html>
