--- a/SDM_webApp/web/pages/localStores/Account/account.html
+++ b/SDM_webApp/web/pages/localStores/Account/account.html
@@ -63,7 +63,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <a href="../../storesAreaAndContent/storesAreaAndContent.html"><button class="btn btn-dark" id="secondPgBtn">go to second page</button></a>
+                    <a href="../../storesAreaAndContent/storesAreaAndContent.html"><button class="btn btn-dark" id="secondPgBtn">back</button></a>
                     <!-- End -->
                 </div>
             </div>
