--- a/SDM_webApp/web/pages/localStores/ownerPage/addNewStore/addNewStore.html
+++ b/SDM_webApp/web/pages/localStores/ownerPage/addNewStore/addNewStore.html
@@ -98,6 +98,6 @@
             </div>
         </div>
     </div>
-    <a href="../../../storesAreaAndContent/storesAreaAndContent.html"><button class="btn btn-dark" id="secondPgBtn">go to second page</button></a>
+    <a href="../../../storesAreaAndContent/storesAreaAndContent.html"><button class="btn btn-dark" id="secondPgBtn">back</button></a>
 </body>
 </html>
